Revise index.html for portfolio update
Updated the HTML structure to reflect a new portfolio theme, changing the language attribute, meta description, title, and various content sections to align with a cybersecurity and full-stack developer focus.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Main project page featuring coding and cybersecurity content with a Matrix effect.">
-    <title>Code Projects - Matrix Design</title>
-    <link rel="stylesheet" href="./css/style.css?v=3">
+    <meta name="description" content="Cybersecurity Specialist & Full-Stack Developer Portfolio - Terminal Interface">
+    <title>Terminal Portfolio | Main Access</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body id="top">
+
     <div id="boot-screen">
         <div id="boot-text"></div>
         <span class="cursor">_</span>
@@ -17,7 +18,9 @@
 
     <header class="capcalera-principal">
         <div class="logo-container">
-            <div class="code-image-simulation">&lt;div class="code"&gt;</div>
+            <div class="code-image-simulation">
+                &lt;root@portfolio:~# whoami&gt;
+            </div>
         </div>
         <nav class="menu-navegacio-principal">
             <ul>
@@ -32,68 +35,88 @@
     <main class="contingut-principal">
         <aside class="columna-aside">
             <div class="aside-content">
-                <h3>Cybersecurity: Risk & Security</h3>
-                <p style="font-family: monospace; color: #0f0; font-size: 0.9em;">&gt; System Status: Secure</p>
-                <div style="border: 1px solid #0f0; height: 100px; margin: 10px 0; display: flex; align-items: center; justify-content: center;">[SECURE_LAYER_V2]</div>
-                <p>La ciberseguridad protege sistemas y redes contra ataques digitales.</p>
-                <ul class="llista-riscos">
-                    <li><strong>Análisis de Riesgos:</strong> Identificación de vulnerabilidades.</li>
-                    <li><strong>Monitoreo de Amenazas:</strong> Análisis de tráfico en tiempo real.</li>
-                    <li><strong>Implementación de Defensas:</strong> Firewalls y cifrado.</li>
-                </ul>
+                <h3>[ SYSTEM_INFO ]</h3>
+                <p class="descripcio-linies">USER: Guest_Agent</p>
+                <p class="descripcio-linies">OS: Matrix_Kernel_6.2</p>
+                <p class="descripcio-linies">STATUS: Authorized</p>
+                <br>
+                <h3>[ TECH_STACK ]</h3>
+                <p class="descripcio-linies">> Python / PowerShell</p>
+                <p class="descripcio-linies">> Linux SysAdmin</p>
+                <p class="descripcio-linies">> SQL Databases</p>
+                <p class="descripcio-linies">> Cisco Networking</p>
             </div>
         </aside>
 
         <section class="seccio-projectes">
-            <article class="projecte">
+            
+            <article class="projecte ciberseguretat-full">
                 <div class="info-textual">
-                    <h2><a href="linux_project.html" class="enllac-principal">Linux Project: System Administration</a></h2>
-                    <p class="descripcio-linies">Exploring core Linux distributions (Ubuntu, CentOS)</p>
-                    <p class="descripcio-linies">Basic command-line interface (CLI) and shell usage</p>
-                    <p class="descripcio-linies">User management and file permissions (chmod/chown)</p>
-                    <p class="descripcio-linies">Introduction to automation with Bash scripting</p>
-                    <hr class="separador">
-                </div>
-                <div class="elements-visuals">
-                    <div class="cercle linux-image">if (cmd)</div>
-                    <div class="cercle linux-image">sudo</div>
-                    <div class="cercle linux-image">#!/bin/sh</div>
-                </div>
-            </article>
-
-            <article class="projecte">
-                <div class="info-textual">
-                    <h2><a href="css_project.html" class="enllac-principal">CSS Project: Modern Layout & Design</a></h2>
-                    <p class="descripcio-linies">Layout techniques using Flexbox and CSS Grid</p>
-                    <p class="descripcio-linies">Understanding the CSS Box Model and positioning</p>
-                    <p class="descripcio-linies">Responsive design using advanced Media Queries</p>
-                    <p class="descripcio-linies">Transitions, animations, and pseudo-elements</p>
-                    <hr class="separador">
-                </div>
-                <div class="elements-visuals">
-                    <div class="cercle css-image">.class</div>
-                    <div class="cercle css-image">display:flex;</div>
-                    <div class="cercle css-image">@media</div>
-                </div>
-            </article>
-
-            <section class="navegacio-pagines">
-                <div class="menu-navegacio-pagines">
-                    <h3 style="color: #0f0; margin-bottom: 10px;">&gt;_ Terminal Navigation</h3>
-                    <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
-                        <a href="#top" style="color: #0f0; text-decoration: none;">[ ↑ Up ]</a>
-                        <a href="projects_portfolio.html" style="color: #0f0; text-decoration: none;">[ cd /projects ]</a>
-                        <a href="python_project.html" style="color: #0f0; text-decoration: none;">[ ./python ]</a>
+                    <h2 data-value="SECURITY OPERATIONS & ARCHITECTURE">
+                        <a href="#">Security Operations & Architecture</a>
+                    </h2>
+                    
+                    <div class="cyber-terminal-box">
+                        <div class="cyber-column">
+                            <p class="descripcio-linies">> [THREAT_HUNTING]: Active monitoring for advanced persistent threats (APTs).</p>
+                            <p class="descripcio-linies">> [NETWORK_HARDENING]: Securing infrastructure via firewall & ACL optimization.</p>
+                            <p class="descripcio-linies">> [VULNERABILITY_SCAN]: Automated auditing of system weaknesses and exploits.</p>
+                        </div>
+                        <div class="cyber-column">
+                            <p class="descripcio-linies">> [PENTESTING]: Simulated cyber-attacks to evaluate security posture.</p>
+                            <p class="descripcio-linies">> [ENCRYPTION_LAYER]: Implementing AES-256 and SSL/TLS secure protocols.</p>
+                            <p class="descripcio-linies">> [SOC_OPERATIONS]: Real-time incident response and forensic analysis.</p>
+                        </div>
                     </div>
                 </div>
-            </section>
+                <div class="elements-visuals">
+                    <div class="cercle security-image">CVE</div>
+                    <div class="cercle security-image">ROOT</div>
+                </div>
+            </article>
+
+            <article class="projecte">
+                <div class="info-textual">
+                    <h2 data-value="LINUX SYSTEM ADMINISTRATION"><a href="linux_project.html">Linux System Administration</a></h2>
+                    <p class="descripcio-linies">Advanced CLI management, user permissions (755), and kernel optimization.</p>
+                </div>
+                <div class="elements-visuals">
+                    <div class="cercle linux-image">BASH</div>
+                </div>
+            </article>
+
+            <article class="projecte">
+                <div class="info-textual">
+                    <h2 data-value="AUTOMATION & SCRIPTING"><a href="python_project.html">Automation & Scripting</a></h2>
+                    <p class="descripcio-linies">Developing custom tools for task automation and data processing using Python.</p>
+                </div>
+                <div class="elements-visuals">
+                    <div class="cercle python-image">def()</div>
+                </div>
+            </article>
+
+            <hr class="separador">
+
+            <nav class="navegacio-pagines">
+                <div class="menu-navegacio-pagines">
+                    <h3>&gt;_ Navigation Console</h3>
+                    <div style="display: flex; justify-content: center; gap: 20px;">
+                        <a href="projects_portfolio.html">[ ls ./projects ]</a>
+                        <a href="satisfaction_form.html">[ vi feedback.log ]</a>
+                    </div>
+                </div>
+            </nav>
         </section>
     </main>
 
     <footer class="peu-pagina">
-        <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
+        <p>&copy; 2026 Matrix Terminal System. All security protocols active.</p>
+        <div class="xarxes-socials">
+            <a href="#">[ GITHUB ]</a>
+            <a href="#">[ LINKEDIN ]</a>
+        </div>
     </footer>
 
-    <script src="./js/matrix_effect.js?v=3"></script>
+    <script src="./js/matrix_effects.js"></script>
 </body>
 </html>
